<resources>
    <string name="app_name">RunningApp</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBnZBk6lfftAiwx1k1JL8XYILE_ycrU_Xw</string>
    <string name="running_app">Running App</string>
    <string name="total_distance">Total Distance</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="_0_step">0 step</string>
    <string name="finish_run">Finish Run</string>
    <string name="start">Start</string>
    <string name="date">DATE</string>
    <string name="add">add</string>
    <string name="your_name">Your Name</string>
    <string name="continuee">Continue</string>
    <string name="your_weight">Your Weight</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="kg">kg</string>
    <string name="_00_00_00">00:00:00</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">DURATION</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="distance">DISTANCE</string>
    <string name="calories_burned">CALORIES BURNED</string>
</resources>
