<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDate"
            android:textColor="@color/haiti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/ic_date"
            app:drawableTint="#a1d651" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/haiti"
            android:text="@string/duration"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/ic_timelapse"
            app:drawableTint="@color/haiti" />

        <TextView
            android:id="@+id/tvAvgSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/haiti"
            android:text="@string/avg_speed"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/speed_icon" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/haiti"
            android:text="@string/distance"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/ic_distance"
            app:drawableTint="@color/downy" />

        <TextView
            android:id="@+id/tvCaloriesBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/haiti"
            android:text="@string/calories_burned"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/fat_fitness"
            app:drawableTint="@color/tacha" />

    </LinearLayout>

</androidx.cardview.widget.CardView>