<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/welcome_nplease_enter_your_name_and_weight"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/blueBlack"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/blueBlack"
            android:textColorHint="@color/blueWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/etWeight"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_back"
            android:ems="10"
            android:hint="@string/your_weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"

            android:padding="6dp"
            android:textColor="@color/blueBlack"
            android:textColorHint="@color/blueWhite"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />


        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/etWeight"
            app:layout_constraintStart_toEndOf="@+id/etWeight"
            app:layout_constraintTop_toTopOf="@+id/etWeight"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/bu"
            android:backgroundTint="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/continuee"
            android:textColor="@color/white"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>